--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gửi Lời Yêu Thương 💌</title>
+<title>Người Chữa Lành 💌</title>
 <style>
 /* ====== CÀI ĐẶT CƠ BẢN ====== */
 * {
@@ -130,19 +130,28 @@ button:hover { background-color: #ff80b0; }
 
 <!-- ====== PHẦN MẬT KHẨU ====== -->
 <div id="passwordScreen" class="fade-in">
-  <h2>🔒 Nhập mật khẩu để mở thư</h2>
+  <h2>🔒 Pass là gì đây hả embe </h2>
   <input type="password" id="passwordInput" placeholder="Nhập mật khẩu..."><br>
-  <button id="checkPassword">Mở thư 💌</button>
-  <p id="wrong" style="color:pink; display:none;">Sai mật khẩu rồi 😢</p>
+  <button id="checkPassword">Mở ở đây nè embe 💌</button>
+  <p id="wrong" style="color:pink; display:none;">Embe sai roii 😢</p>
 </div>
 
 <!-- ====== PHẦN LÁ THƯ ====== -->
 <div id="letter" class="hidden fade-in">
-  <h2>💌 Gửi đến người đặc biệt 💌</h2>
+  <h2>💌 Gửi đến Embe Ngoan Xinh Yêu 💌</h2>
   <p>
-    Anh muốn nói rằng, mỗi khoảnh khắc bên em đều là điều tuyệt vời nhất.  
-    Cảm ơn em vì đã đến và khiến thế giới của anh trở nên lung linh hơn 💖  
-    Dù thời gian có trôi, tình cảm này vẫn sẽ mãi như bầu trời đầy sao kia ✨
+    Xin Chào Cô Gái Hài Hước Tym Nhiều Vết Xước !
+Embe biettt hom nay la ngay gi khonggggg
+Hôm nay là ngày của embe đó💖
+Nên anh có một món quà nho nhỏ tặng embe của anh đó
+Đây là "Bí Mật Cho Em".Từ lúc quen embe và nghe embe kể về chuyện quá khứ của embe thì anh cũng đã quyết tâm chữa lành cho em roii heheh.
+Anh biết là embe đã chịu nhiều thiệt thòi từ gđinh cho đến tình yêu,
+Nhưng mà embe đừng buồn vì giờ siu nhân đỏ chứng tỏ yeu em sẽ đến chữa lành cho embe nàaa.
+Anh mong là món quà nho nhỏ này sẽ chữa lành một phần nào cho embe của anh aaa💖
+Anh muốn nói rằng, mỗi khoảnh khắc bên em đều là điều tuyệt vời nhất.  
+Cảm ơn em vì đã đến và khiến thế giới của anh trở nên lung linh hơn 💖  
+    Anh yeuuu Embe (Đừng Chửi Anh Nhé)
+
   </p>
   <button id="closeLetter">Đọc xong thư 💕</button>
 </div>
@@ -209,7 +218,7 @@ const heartContainer = document.getElementById("heartContainer");
 const music1 = document.getElementById("music1");
 const music2 = document.getElementById("music2");
 
-const correctPassword = "12"; // 🔑 ← đổi mật khẩu ở đây
+const correctPassword = "23062007"; // 🔑 ← đổi mật khẩu ở đây
 
 checkPassword.addEventListener("click", () => {
   if (passwordInput.value === correctPassword) {
@@ -288,3 +297,4 @@ function startFloatingImages() {
 </script>
 </body>
 </html>
+
