--- a/index.html
+++ b/index.html
@@ -263,38 +263,43 @@ const images = [
   "25.jfif","26.jfif","27.jfif","28.jfif","29.jfif","30.jfif",
   "31.jfif","32.jfif","33.jfif","34.jfif"
 ];
+const imageCount = 34; // số lượng ảnh
+const imageExtension = "jfif"; // hoặc jpg, png... tùy bạn
 
-function startFloatingImages() {
-  setInterval(() => {
-    const img = document.createElement("img");
-    img.src = images[Math.floor(Math.random() * images.length)];
-    img.style.position = "fixed";
-    img.style.left = Math.random() * 100 + "vw";
-    img.style.top = Math.random() * 100 + "vh";
-    img.style.width = (50 + Math.random() * 50) + "px";
-    img.style.opacity = 0;
-    img.style.transition = "all 12s ease-in-out";
-    img.style.zIndex = 5;
-    document.body.appendChild(img);
+function createFloatingImage() {
+  const img = document.createElement("img");
+  const randomIndex = Math.floor(Math.random() * imageCount) + 1;
+  img.src = ${randomIndex}.${imageExtension};
+  img.style.position = "fixed";
+  img.style.width = "90px"; // kích thước ảnh
+  img.style.opacity = "0.85";
+  img.style.left = Math.random() * window.innerWidth + "px";
+  img.style.top = Math.random() * window.innerHeight + "px";
+  img.style.zIndex = "1000";
+  img.style.transition = "transform 20s ease-in-out, opacity 20s ease-in-out";
+  document.body.appendChild(img);
 
-    // Sau khi thêm: hiện ảnh mờ dần và trôi ngẫu nhiên
-    setTimeout(() => {
-      img.style.opacity = 1;
-      img.style.transform = `
-        translate(${(Math.random() - 0.5) * 200}px, ${(Math.random() - 0.5) * 200}px)
-        scale(${0.8 + Math.random() * 0.4})
-        rotate(${(Math.random() - 0.5) * 40}deg)
-      `;
-    }, 100);
+  // Ảnh di chuyển ngẫu nhiên liên tục
+  function moveImage() {
+    const x = Math.random() * window.innerWidth;
+    const y = Math.random() * window.innerHeight;
+    img.style.transform = translate(${x - parseFloat(img.style.left)}px, ${y - parseFloat(img.style.top)}px) scale(${0.8 + Math.random() * 0.6});
+  }
 
-    // 8s sau: ảnh mờ dần và biến mất
-    setTimeout(() => {
-      img.style.opacity = 0;
-      setTimeout(() => img.remove(), 4000);
-    }, 8000);
-  }, 1000);
+  moveImage();
+  setInterval(moveImage, 8000); // mỗi 8s ảnh lại trôi sang hướng khác
+
+  // Ảnh tự biến mất sau 1 phút
+  setTimeout(() => {
+    img.style.opacity = "0";
+    setTimeout(() => img.remove(), 5000);
+  }, 60000);
 }
+
+// Tạo ảnh trôi ngẫu nhiên mỗi 1.5 giây
+setInterval(createFloatingImage, 1500);
 </script>
 </body>
 </html>
+
 
